Implemented leader elecion

--- a/docker_images/database/Dockerfile
+++ b/docker_images/database/Dockerfile
@@ -12,5 +12,5 @@ RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
 
 # Specify the command to run the application
-CMD ["python", "database_server.py"]
+CMD ["python", "app.py"]
 
