--- a/kubernetes/database-ns/service.yaml
+++ b/kubernetes/database-ns/service.yaml
@@ -10,7 +10,7 @@ spec:
     - protocol: TCP
       port: 5001
       targetPort: 5001
-  type: LoadBalancer
+  type: ClusterIP
 ---
 apiVersion: v1
 kind: Service
